2002-02-08  Tristan Tarrant  <nadir@users.sourceforge.net>
	* */Makefile.am: include headers dir

2002-02-08  Ryan Nunn  <triforce@merlin.net.au>
	* audio/*.*, audio/midi_drivers/*.*, exultmenu.cc : Changes to the midi
	  system. Now evern faster, and safer too. New super accurate integer
	  timing method for Windows. Improved XMIDI looping for Pentagram in
	  Windows. Probably other things as well that I just can't remember

	* sigame.cc : Fixed a crash in the SI Intro.

	* data/bg/defaultkeys.txt, data/si/defaultkeys.txt : Added Alt-F4 (quit)
	  and Alt-Enter (toggle fullscreen) shortcut keys.

	* headers/common_types.h : Some things from both exult_types.h and
	  exult_constants.h that are needed by the modules shared with
	  Pentagram

	* headers/gamma.h : Moving this to headers (needed by Pentagram)

	* exceptions.h, gamma.h : Since common_types.h was added, I'm removing
	  these because now everyone needs to use headers

	* Makefile.cygwin, Makefile.win32,  msvcstuff/*.dsp : Setting things up
	  to use the files in headers dir. 

	* conf/*.*, files/*.*, audio/*.*: Changes so thing will compile for
	  Pentagram. Note that PENTRAGRAM must be defined when compiling
	  Pentagram.

2002-02-08  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Removed old bug fixup.
	* readnpcs.cc: Handle case where 'npc.dat' and/or 'schedule.dat'
	don't yet exist.

2002-02-08  Ryan Nunn  <triforce@merlin.net.au>
	* server/servewin32.cc : Fixed the GetLongPathName issue. Exult and
	  Exult Studio both need to be recompiled, because this effects 
	  communications.

2002-02-07  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: Removed open of static/flaginit.dat.

	* shapes/shapewrite.cc: Use num_shapes, not 1024.
	* mapedit/studio.cc:  Fixed ::write_shape_info().
	* mapedit/shapefile.cc:  Compare filenames ignoring case.

2002-02-05  Max Horn  <max@quendi.de>

	* server/servemsg.cc: changed to fix building over here

2002-02-03  Jeff Freedman  <jeff@amy.nerble.net>