@@ -85,7 +85,13 @@ Game::~Game()
 char *Game::get_game_identity(const char *savename)
 {
     ifstream in;
-    U7open(in, savename);		// Open file; throws an exception in case of an error.
+    try {
+        U7open(in, savename);		// Open file.
+    } catch (const exult_exception &e) {
+	if (is_editing())		// Okay if creating a new game.
+	    return strdup(gametitle.c_str());
+	throw e;
+    }
     in.seekg(0x54);			// Get to where file count sits.
     int numfiles = Read4(in);
     char *game_identity = 0;
