@@ -1,3 +1,7 @@
+2002-02-09  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gamewin.cc: Create IDENTITY for newly-developed game.
+
 2002-02-08  Tristan Tarrant  <nadir@users.sourceforge.net>
 	* */Makefile.am: include headers dir
 
